@@ -2,6 +2,9 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2017-10-13	Richard Forth   Closes #223 Added an easter egg.
+				To trigger it, set maxclients /
+				maxrequestworkers to 5 or less.
 2017-10-13	Richard Forth   Closes #222 pidfile not found when ecased in quotes.
 2017-10-13	Richard Forth   Added some much needed carriage returns to VERBOSE lines.
 2017-07-14	Richard Forth   Resolved #215, pidfile issue.
